--- a/style.css
+++ b/style.css
@@ -17,14 +17,15 @@ a:active {
 body,
 html {
   position: relative;
-  width: 100%;
-  height: 100%;
+  width: 100vw;
+  height: 100vh;
   display: flex;
   flex-direction: column;
   font-family: "Arvo", Helvetica, sans-serif;
   font-family: 12px;
   color: #555;
   background: #f8ffe5;
+  overflow: hidden;
 }
 strong {
   font-weight: bold;
@@ -315,4 +316,26 @@ header .container {
 }
 .not-recommended__item:active + .not-recommended__annotation:before {
   content: "😨";
+}
+@media screen and (min-width: 1900px) {
+  body {
+    width: 100vw;
+    height: 100vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+  .container {
+    margin: 0 auto;
+    padding-bottom: 4.5rem;
+    flex: 1;
+    width: 100%;
+    max-width: 950px;
+    /* height: 100vh; */
+    text-align: center;
+  }
+  .game {
+    width: 100%;
+    height: 100%;
+  }
 }
