--- a/style.css
+++ b/style.css
@@ -113,7 +113,6 @@ header .container {
   margin-top: 10%;
   padding: 7px;
   display: inline-block;
-  border-radius: 3px;
   box-sizing: border-box;
   background: rgba(255, 255, 255, 0.25);
   box-shadow: 0 8px 32px 0 rgba(31, 38, 135, 0.37);
@@ -143,13 +142,6 @@ header .container {
   z-index: 1;
   text-align: center;
   border: 7px solid rgba(255, 255, 255, 0.18);
-  /* background-color: #f8ffe5; */
-  /* background: rgba(255, 255, 255, 0.25); */
-  /* box-shadow: 0 8px 32px 0 rgba( 31, 38, 135, 0.37 );
-backdrop-filter: blur( 4px );
--webkit-backdrop-filter: blur( 4px );
-border-radius: 10px;
-border: 1px solid rgba( 255, 255, 255, 0.18 ); */
 }
 .tile {
   opacity: 0;
@@ -162,9 +154,7 @@ border: 1px solid rgba( 255, 255, 255, 0.18 ); */
   font-size: 1.8rem;
   align-items: center;
   transition: 110ms ease-in-out;
-  border-radius: 3px;
-  /* border: 7px solid #9a9a95; */
-
+  border-radius: 10px;
   border: 7px solid rgba(255, 255, 255, 0.18);
   box-sizing: border-box;
 }
@@ -222,20 +212,7 @@ border: 1px solid rgba( 255, 255, 255, 0.18 ); */
   position: absolute;
   top: -100px;
 }
-/* .add.active {
-  animation: add 0.8s ease-in-out;
-} */
 
-/* @keyframes add {
-  0% {
-    opacity: 1;
-    top: 0;
-  }
-  100% {
-    opacity: 0;
-    top: -100%;
-  }
-} */
 @keyframes pop {
   0% {
     transform: scale(0.5);
@@ -276,6 +253,7 @@ border: 1px solid rgba( 255, 255, 255, 0.18 ); */
   color: white;
   font-size: 2rem;
   transition: opacity 0.3s ease-in-out;
+  border-radius: 10px;
 }
 .end btn {
   margin-top: 1rem;
@@ -645,3 +623,7 @@ border: 1px solid rgba( 255, 255, 255, 0.18 ); */
     box-sizing: border-box;
   }
 }
+
+/* end button animation starts*/
+
+/* end button animation ends */
