--- a/style.css
+++ b/style.css
@@ -218,7 +218,7 @@ border: 1px solid rgba( 255, 255, 255, 0.18 ); */
 }
 .add {
   font-size: 5rem;
-  color: black;
+  color: white;
   position: absolute;
   top: -100px;
 }
@@ -558,18 +558,20 @@ border: 1px solid rgba( 255, 255, 255, 0.18 ); */
   -moz-border-radius: 50%;
   border-radius: 50%;
 
-  -webkit-box-shadow: 0 20px 30px rgba(0, 0, 0, 0.2),
+  /* -webkit-box-shadow: 0 20px 30px rgba(0, 0, 0, 0.2),
     inset 0px 10px 30px 5px rgba(255, 255, 255, 1);
   -moz-box-shadow: 0 20px 30px rgba(0, 0, 0, 0.2),
     inset 0px 10px 30px 5px rgba(255, 255, 255, 1);
   box-shadow: 0 20px 30px rgba(0, 0, 0, 0.2),
-    inset 0px 10px 30px 5px rgba(255, 255, 255, 1);
+    inset 0px 10px 30px 5px rgba(255, 255, 255, 1); */
+
+  /* background-image: url("./assets/bubble.png");
+  background-size: contain; */
 
   height: 200px;
   position: absolute;
   top: 0px;
   width: 200px;
-  background: #00b4ff;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -644,4 +646,13 @@ border: 1px solid rgba( 255, 255, 255, 0.18 ); */
     border-radius: 3px;
     box-sizing: border-box;
   }
+}
+
+.bubble {
+  background: rgba(255, 255, 255, 0.25);
+  box-shadow: 0 8px 32px 0 rgba(31, 38, 135, 0.37);
+  backdrop-filter: blur(0px);
+  -webkit-backdrop-filter: blur(4px);
+  /* border-radius: 10px; */
+  border: 1px solid rgba(255, 255, 255, 0.18);
 }
