--- a/style.css
+++ b/style.css
@@ -25,7 +25,7 @@ html {
   flex-direction: column;
   color: #555;
   overflow: hidden;
-  background-image: url("https://github.com/NOOBUV/2048-game/blob/main/rm380-02.jpg");
+  background-image: url("https://raw.githubusercontent.com/NOOBUV/2048-game/main/rm380-02.jpg");
   background-size: cover;
   background-repeat: no-repeat;
 }
